root css variables added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 <body>
     
+    <header>
+        <div class="top-menu">
+            <div class="container">
+                <div>vänster</div>
+                <div>höger</div>
+            </div>
+        </div>
 
+    </header>
     
 </body>
 </html>
