--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
             </div>
         </div>
 
+       <div class="main-menu">
+            <div class="container">
+                <div class="brand">
+                   <a href="index.html"><img src="images/logotype.svg" alt="kenkata webshop"></a> 
+                </div>
+                <div class="search"></div>
+                <div class="menu-links">
+                    <a class="menu-link" href="#"><i class="fa-regular fa-user me-2"></i>My account</a>
+                    <a class="menu-link" href="#"><i class="fa-regular fa-heart"></i></a>
+                    <a class="menu-link" href="#"><i class="fa-regular fa-shuffle"></i></a>
+                    <a class="menu-link" href="#"><i class="fa-regular fa-cart-shopping m-2"></i>
+                        <span id="cart-total">€9999.00</span>
+                    </a>
+                </div>
+            </div>
+       </div> 
     </header>
     
 </body>
