--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                     </a>
                 </div>
             </div>
+            <nav>
+                <div class="container">
+                    <div class="browse-categories">
+                        
+                    </div>
+                    <div class="special-offer">a</div>
+                </div>
+            </nav>
        </div> 
     </header>
     
