--- a/index.html
+++ b/index.html
@@ -71,9 +71,22 @@
             <nav>
                 <div class="container">
                     <div class="browse-categories">
-                        
+                        <div class="dropdown">
+                            <button type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span>
+                                    <i class="fa-regular fa-bars me-3"></i> Browse Categories
+                                </span>
+                                <i class="fa-regular fa-chevron-down ms-4"></i>
+                            </button>
+                            <u1 class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Computers</a></li>
+                                <li><a class="dropdown-item" href="#">TV & Displays</a></li>
+                            </u1>
+                        </div>
                     </div>
-                    <div class="special-offer">a</div>
+                    <div class="special-offer">
+                        <button class="btn btn-theme">SPECIAL OFFER</button>
+                    </div>
                 </div>
             </nav>
        </div> 
