--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                     <a class="menu-link" href="#"><i class="fa-regular fa-user me-2"></i>My account</a>
                     <a class="menu-link" href="#"><i class="fa-regular fa-heart"></i></a>
                     <a class="menu-link" href="#"><i class="fa-regular fa-shuffle"></i></a>
-                    <a class="menu-link" href="#"><i class="fa-regular fa-cart-shopping m-2"></i>
-                        <span id="cart-total">€9999.00</span>
+                    <a id="cart" class="menu-link" href="#">
+                        <span class="badge rounded-pill">99+</span>
+                        <i class="fa-regular fa-cart-shopping m-2"></i>
+                        <span>€9999.00</span>
                     </a>
                 </div>
             </div>
@@ -146,27 +148,27 @@
             </div>
 
             <div class="grid">
-                <div id="category-box-1" class="category-box">
+                <a href="#" id="category-box-1" class="category-box">
                     <div class="category-box-title">Men</div>
-                </div>
-                <div id="category-box-2" class="category-box">
+                </a>
+                <a href="#" id="category-box-2" class="category-box">
                     <div class="category-box-title">Wommen</div>
-                </div>
-                <div id="category-box-3" class="category-box">
+                </a>
+                <a href="#" id="category-box-3" class="category-box">
                     <div class="category-box-title">Kids</div>
-                </div>
-                <div id="category-box-4" class="category-box">
+                </a>
+                <a href="#" id="category-box-4" class="category-box">
                     <div class="category-box-title">Shose</div>
-                </div>
-                <div id="category-box-5" class="category-box">
+                </a>
+                <a href="#" id="category-box-5" class="category-box">
                     <div class="category-box-title">Hats</div>
-                </div>
-                <div id="category-box-6" class="category-box">
+                </a>
+                <a href="#" id="category-box-6" class="category-box">
                     <div class="category-box-title">Sunglasses</div>
-                </div>
-                <div id="category-box-7" class="category-box">
+                </a>
+                <a href="#" id="category-box-7" class="category-box">
                     <div class="category-box-title">Watches</div>
-                </div>
+                </a>
             </div>  
 
         </div>
