shop by category added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
        </div> 
     </header>
 
-    <section class="showcase d-none">
+    <section class="showcase">
         <div class="container">
             <div class="showcase-body">
                 <h1>Shopping is <strong>MORE FUN</strong></h1>
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section class="webshop-info d-none">
+    <section class="webshop-info">
         <div class="container">
             <div class="info-box">
                 <img src="images/icons/free-shipping-icon.svg" alt="Free shipping">
@@ -149,25 +149,46 @@
 
             <div class="grid">
                 <a href="#" id="category-box-1" class="category-box">
-                    <div class="category-box-title">Men</div>
+                    <div class="category-box-title">
+                        Men
+                        <span>200 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-2" class="category-box">
-                    <div class="category-box-title">Wommen</div>
+                    <div class="category-box-title">
+                        Wommen
+                        <span>1000 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-3" class="category-box">
-                    <div class="category-box-title">Kids</div>
+                    <div class="category-box-title">
+                        Kids
+                        <span>500 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-4" class="category-box">
-                    <div class="category-box-title">Shose</div>
+                    <div class="category-box-title">
+                        Shose
+                        <span>200 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-5" class="category-box">
-                    <div class="category-box-title">Hats</div>
+                    <div class="category-box-title">
+                        Hats
+                        <span>30 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-6" class="category-box">
-                    <div class="category-box-title">Sunglasses</div>
+                    <div class="category-box-title">
+                        Sunglasses
+                        <span>22 products</span>
+                    </div>
                 </a>
                 <a href="#" id="category-box-7" class="category-box">
-                    <div class="category-box-title">Watches</div>
+                    <div class="category-box-title">
+                        Watches
+                        <span>5 products</span>
+                    </div>
                 </a>
             </div>  
 
