--- a/account.html
+++ b/account.html
@@ -97,17 +97,71 @@
     <section class="site-title">
         <div class="container">
             <h1>My Account</h1>
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item" aria-current="page">My Account</li>
-                </ol>
-              </nav>
+            <ul class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <li>My Account</li>
+            </ul>
         </div>
-
     </section>
 
+    <section class="signup-signin form-theme">
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">LOGIN</h1>
+                    <form id="signinForm">
+                        <div class="my-4">
+                            <label for="signin_email">Email <span class="required">*</span></label>
+                            <input id="signin_email" type="email" autocomplete="email" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="signin_password">Password <span class="required">*</span></label>
+                            <input id="signin_password" type="password" autocomplete="current-password" required>
+                        </div>
+                        <div class="mb-4 d-grid">
+                            <button type="submit" class="btn btn-lg btn-theme">LOG IN</button>
+                        </div>
+                        <div>
+                            <input id="signin_remeberMe" type="checkbox">
+                            <label for="signin_remeberMe">Remember me</label>
+                            <a href="#">Lost your password?</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">REGISTER</h1>
+                    <p class="card-text text-small">Registering for this site allows you to access your order status and history. Just fill in the fields below, and we’ll get a new account set up for you in no time. We will only ask you for information necessary to make the purchase process faster and easier.</p>
 
+                    <form id="signupForm">
+                        <div class="mb-4">
+                            <label for="signup_firstName">Firstname <span class="required">*</span></label>
+                            <input id="signup_firstName" type="text" autocomplete="given-name" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="signup_lastName">Lastname <span class="required">*</span></label>
+                            <input id="signup_lastName" type="text" autocomplete="family-name" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="signup_email">Email <span class="required">*</span></label>
+                            <input id="signup_email" type="email" autocomplete="email" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="signup_password">Password <span class="required">*</span></label>
+                            <input id="signup_password" type="password" autocomplete="current-password" required>
+                        </div>
+                        <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="#">privacy policy</a>.</p>
+                        <div class="mb-3 d-grid">
+                            <button type="submit" class="btn btn-lg btn-theme">REGISTER</button>
+                        </div>
+                    </form>
+
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
