--- a/account.html
+++ b/account.html
@@ -121,10 +121,22 @@
                         <div class="mb-4 d-grid">
                             <button type="submit" class="btn btn-lg btn-theme">LOG IN</button>
                         </div>
-                        <div>
-                            <input id="signin_remeberMe" type="checkbox">
-                            <label for="signin_remeberMe">Remember me</label>
+                        <div class="mb-4 d-flex justify-content-between align-items-center">
+                            <div class="d-flex">
+                                <input id="signin_remeberMe" type="checkbox" class="me-2">
+                                <label for="signin_remeberMe">Remember me</label>
+                            </div>
                             <a href="#">Lost your password?</a>
+                        </div>
+                        <div class="mb-4 external-logins">
+                            <div class="mb-0">
+                                <div class="label">OR LOGIN WITH</div>
+                                <div class="line"></div>
+                        </div>
+                    </div>
+                        <div class="socialmedia-buttons">
+                            <div>Facebook</div>
+                            <div>Google</div>
                         </div>
                     </form>
                 </div>
