--- a/account.html
+++ b/account.html
@@ -134,9 +134,14 @@
                                 <div class="line"></div>
                         </div>
                     </div>
-                        <div class="socialmedia-buttons">
-                            <div>Facebook</div>
-                            <div>Google</div>
+                        <div class="external-socialmedia-buttons">
+                            <div class="facebook-button">
+                                <button></button>
+                            </div>
+                            
+                            <div class="google-button">
+                                <button></button>
+                            </div>
                         </div>
                     </form>
                 </div>
