--- a/account.html
+++ b/account.html
@@ -186,10 +186,14 @@
     </section>
 
 
+    <footer class="footer">
+        <div class="container">
+            <p>© Copyright 2022 Kenkata</p>
+        </div>
+    </footer>
 
 
 
-
-    <div style="height: 4000px;"></div>
+    <!-- <div style="height: 4000px;"></div> -->
 </body>
 </html>
