--- a/account.html
+++ b/account.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <header class="">
+    <header>
         <div class="top-menu">
             <div class="container">
                 <div class="site-settings">
@@ -193,7 +193,5 @@
     </footer>
 
 
-
-    <!-- <div style="height: 4000px;"></div> -->
 </body>
 </html>
