--- a/account.html
+++ b/account.html
@@ -117,14 +117,17 @@
                     <form id="signinForm">
                         <div class="my-4">
                             <label for="signin_email">Email <span class="required">*</span></label>
-                            <input id="signin_email" type="email" autocomplete="email" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                            <input id="signin_email" type="email" autocomplete="email" class="form-control invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
                             <div id="validationServer03Feedback" class="invalid-feedback">
-                                <!-- Please provide a valid email. -->
-                              </div>
+                                 Please provide a valid email.
+                            </div>
                         </div>
                         <div class="mb-4">
                             <label for="signin_password">Password <span class="required">*</span></label>
-                            <input id="signin_password" type="password" autocomplete="current-password" required>
+                            <input id="signin_password" type="password" autocomplete="current-password" class="form-control invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                            <div id="validationServer03Feedback" class="invalid-feedback">
+                                Please provide a valid password.
+                           </div>
                         </div>
                         <div class="mb-4 d-grid">
                             <button type="submit" class="btn btn-lg btn-theme">LOG IN</button>
@@ -170,11 +173,17 @@
                         </div>
                         <div class="mb-4">
                             <label for="signup_email">Email <span class="required">*</span></label>
-                            <input id="signup_email" type="email" autocomplete="email" required>
+                            <input id="signup_email" type="email" autocomplete="email" class="form-control invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                            <div id="validationServer03Feedback" class="invalid-feedback">
+                                Please provide a valid email.
+                           </div>
                         </div>
                         <div class="mb-4">
                             <label for="signup_password">Password <span class="required">*</span></label>
-                            <input id="signup_password" type="password" autocomplete="current-password" required>
+                            <input id="signup_password" type="password" autocomplete="current-password" class="form-control invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                            <div id="validationServer03Feedback" class="invalid-feedback">
+                                Please provide a valid password.
+                           </div>
                         </div>
                         <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="#">privacy policy</a>.</p>
                         <div class="mb-3 d-grid">
